Correct linking of boost
Seems like there are a lot of variables to mix up when using CMake...

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(pigaroctl)
 find_package(Boost REQUIRED system)
 add_executable(pigaroctl main.cpp)
-target_link_libraries(pigaroctl ${Boost_LIBRARY_DIRS})
+target_link_libraries(pigaroctl ${Boost_LIBRARIES})
