--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ compiler:
 - clang
 
 install:
-- sudo apt-get install cmake libboost1.55-all-dev
+- sudo apt-get install libboost-all-dev
 
 before_script:
-- mkdir build && cd build
-- cmake ..
+- cd .. && mkdir build && cd build
+- cmake ../pgaro
 
 script:
 - make all
