--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,12 @@ compiler:
 - gcc
 - clang
 
+before_install:
+- sudo add-apt-repository ppa:afrank/boost
+- sudo apt-get update -qq
+
 install:
-- sudo apt-get install libboost-all-dev
+- sudo apt-get install libboost-system-dev libboost-asio-dev
 
 before_script:
 - cd .. && mkdir build && cd build
