--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
 - clang
 
 before_install:
-- sudo add-apt-repository ppa:afrank/boost
+- sudo add-apt-repository -y ppa:afrank/boost
 - sudo apt-get update -qq
 
 install:
